19928
Using the JOL tool (http://openjdk.java.net/projects/code-tools/jol/). Specifically, the class GraphLayout (http://hg.openjdk.java.net/code-tools/jol/file/a44c63ae8c8e/jol-core/src/main/java/org/openjdk/jol/info/GraphLayout.java) 
```scala
> scala -classpath jol-cli-0.4-full.jar
Welcome to Scala version 2.11.6 (Java HotSpot(TM) 64-Bit Server VM, Java 1.8.0_40).
Type in expressions to have them evaluated.
Type :help for more information.

scala> import org.openjdk.jol.info._
import org.openjdk.jol.info._

scala> GraphLayout.parseInstance("hi").toFootprint()
<console>:11: error: ambiguous reference to overloaded definition,
both method parseInstance in object GraphLayout of type (x$1: Any, x$2: Object*)org.openjdk.jol.info.GraphLayout
and  method parseInstance in object GraphLayout of type (x$1: Any)org.openjdk.jol.info.GraphLayout
match argument types (String)
              GraphLayout.parseInstance("hi").toFootprint()
                          ^
```

I found no way to specify the second method (the one with a single argument). I think it is obvious here it should have been chosen (I know both are legitimate, but it is the more constraint)
